--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -2,16 +2,15 @@
 <html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="canonical" href="https://getbootstrap.com/docs/5.3/examples/footers/">
     <style>
 
     </style>
 </head>
-
-<footer class="my-4 border-top position-absolute bottom-0 w-100" style="background-color:#1f1f1f;">
-    <div class="col-md-4 d-flex align-items-center">
+<body>
+<footer class="footer border-top mt-auto">
+    <div class="container">
         <span class="mb-3 mb-md-0 text-white" style="text-align:center;">&copy; 2024 Company, Inc</span>
     </div>
 </footer>
-
+</body>
 </html>
