--- a/src/main/resources/static/css/layout1.css
+++ b/src/main/resources/static/css/layout1.css
@@ -1,24 +1,28 @@
-html{
+    html,body{
     position: relative;
     min-height : 100%;
+    height:100%;
     margin: 0;
     background-color : #1f1f1f;
     }
-   body{
-    min-height: 100%;
-    background-color : #1f1f1f;
-   }
+     .content{
+       margin-top : 50px;
+       margin-left : 200px;
+       margin-right : 200px;
+       margin-bottom:50px;
+       height : auto;
+         min-height: 100%;
+        }
+
+
    .footer{
-   position: absolute;
-   left : 0;
-   right : 0;
-   bottom : 0;
-   width : 100%;
-   padding : 15px 0;
-   text-align:center;
+   width:100%;
+
+   position: relative;
+   bottom:0;
+   transform : translateY(-100%);
+      padding : 15px 0;
+      text-align:center;
+   background-color : #1f1f1f;
+
    }
-   .content{
-   margin : 50px 200px 100px 200px;
-
-
-}
