--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+
 <div th:fragment="header" style="position:sticky; top:0; z-index:1;">
     <div class="w-100">
         <header class="lh-1 pb-3" style="background-color:#1f1f1f;">
@@ -8,14 +9,11 @@
                     <a class="blog-header-logo text-body-emphasis text-decoration-none px-5 pt-0" href="/">
                         <img src="/images/topLogo.png" width="100px" style="max-width:25%; height:auto;">
                     </a>
-                    <a class="link-secondary mx-5"></a>
-                    <a class="link-secondary text-white-50 fw-bolder align-middle" href="/admin/item/new" style="text-decoration:none;">챔피언 분석</a>
-                    <a class="link-secondary text-white-50 fw-bolder align-middle mx-5" href="/admin/items" style="text-decoration:none;">랭킹</a>
-                    <a class="link-secondary text-white-50 fw-bolder align-middle" href="/admin/items" style="text-decoration:none;">아이템</a>
                 </div>
                 <div class="col-4 d-flex justify-content-end align-items-center">
-                    <a class="link-secondary text-white-50 fw-bolder align-middle" style="text-decoration: none; margin-right:60px;" aria-current="page" href="/members/login" sec:authorize="isAnonymous()">로그인</a>
-                    <a class="link-secondary text-white-50 fw-bolder align-middle" style="text-decoration: none; margin-right:60px;" aria-current="page" href="/members/logout" sec:authorize="isAuthenticated()" >로그아웃</a>
+                    <a class="menu link-secondary text-white-50 fw-bolder align-middle" href="/board/freeBoard">자유 게시판</a>
+                    <a class="menu link-secondary text-white-50 fw-bolder align-middle" aria-current="page" href="/members/login" sec:authorize="isAnonymous()">로그인</a>
+                    <a class="menu link-secondary text-white-50 fw-bolder align-middle" aria-current="page" href="/members/logout" sec:authorize="isAuthenticated()" >로그아웃</a>
                 </div>
             </div>
         </header>
