--- a/src/main/resources/templates/members/login.html
+++ b/src/main/resources/templates/members/login.html
@@ -91,10 +91,10 @@
 </head>
 <body class="pb-5">
 <div layout:fragment="content" id="main">
-    <div class="container-fluid row" style="width:1500px; height:680px;">
+    <div class="container-fluid row" style=" height:680px;">
         <aside id="left" class="col-4">
         </aside>
-        <form action="/members/login" role="form" method="post" class="col mx-5">
+        <form action="/members/login" role="form" method="post" class="col m-5">
             <h3>로그인</h3>
             <div class="form-group mb-2">
                 <label th:for="email">이메일 주소</label>
