--- a/src/main/resources/templates/search/searchPage.html
+++ b/src/main/resources/templates/search/searchPage.html
@@ -134,7 +134,7 @@
 
 <body>
     <div layout:fragment="content">
-        <div class="container-fluid" style="width:1100px;">
+        <div class="container-fluid pb-3" style="width:1100px;">
             <div class="summonerInfo row" style="width: 1000px; margin: 0 auto;">
                 <div class="col row">
                     <div class="summonersImg col-3">
