--- a/src/main/resources/templates/board/userBoard.html
+++ b/src/main/resources/templates/board/userBoard.html
@@ -47,19 +47,19 @@
 
         <div class="boardTable p-3" style="width:1000px;">
             <div class="textName mx-2" style="margin-bottom:-15px;">
-                <p style="margin-bottom:-5px;">[일반] 글 제목 ㅋㅋ</p>
+                <p style="margin-bottom:-5px;" th:text="'[' + ${post.header} + '] ' + ${post.title}">[일반] 글 제목 ㅋㅋ</p>
                 <div class="row" style="">
-                    <p style="line-height:40px; font-size:13px;" class="col-1 ">구난병</p>
-                    <p style="line-height:40px; font-size:13px;" class="col-2 px-1">2024-08-27 15:20</p>
+                    <p style="line-height:40px; font-size:13px;" class="col-1 " th:text="${post.author}"> 구난병</p>
+                    <p style="line-height:40px; font-size:13px;" class="col-2 px-1" th:text="${#temporals.format(post.createdDate, 'yyyy-MM-dd HH:mm:ss')}">2024-08-27 15:20</p>
                     <div class="col-6">&nbsp;</div>
-                    <p style="line-height:40px; font-size:13px;" class="col-1">조회 133</p>
-                    <p style="line-height:40px; font-size:13px;" class="col-1">추천 123</p>
-                    <p style="line-height:40px; font-size:13px;" class="col-1">댓글 1</p>
+                    <p style="line-height:40px; font-size:13px;" class="col-1" th:text="'조회 ' + ${post.viewCount}"></p>
+                    <p style="line-height:40px; font-size:13px;" class="col-1" th:text="'추천 ' + ${post.likeCount}"></p>
+                    <p style="line-height:40px; font-size:13px;" class="col-1" th:text="'댓글 ' + ${post.commentCount}"></p>
                 </div>
             </div>
             <hr style="color:#fff;">
             <div class="textContent my-5 py-3">
-                <p>밥은 먹었냐?</p>
+                <p th:text="${post.content}"></p>
             </div>
             <div class="good d-flex" style="justify-content:center;">
                 <button class="btn btn-primary rounded-5 " onclick="#" style="width:90px; justify-content:center;">추천
