--- a/src/main/resources/static/css/layout1.css
+++ b/src/main/resources/static/css/layout1.css
@@ -28,9 +28,9 @@
    }
    .menu:hover{
                color:#fff !important;
-           }
-           .menu {
-               text-decoration: none;
-               margin-right: 60px;
-               color: #888; /* 기본 색상 설정 */
-           }
+   }
+    .menu {
+        text-decoration: none;
+        margin-right: 40px;
+        color: #888; /* 기 색상 설정 */
+    }
