--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -5,15 +5,42 @@
     <div class="w-100">
         <header class="lh-1 pb-3" style="background-color:#1f1f1f;">
             <div class="row pt-3 flex-nowrap justify-content-between align-items-center" style="width:1000px; margin:0 auto; font-size:20px; height:50px; line-height:50px;">
-                <div class="col-7" style="padding:0;">
-                    <a class="blog-header-logo text-body-emphasis text-decoration-none px-5 pt-0" href="/">
-                        <img src="/images/topLogo.png" width="100px" style="max-width:25%; height:auto;">
+                <div class="col-2">
+                    <a class="pt-0" style="width:300px;" href="/">
+                        <img src="/images/topLogo.png"  style="width:150px; height:auto;">
                     </a>
                 </div>
-                <div class="col-5 d-flex justify-content-end align-items-center">
-                    <a class="menu link-secondary text-white-50 fw-bolder align-middle" href="/board/freeBoard">자유 게시판</a>
-                    <a class="menu link-secondary text-white-50 fw-bolder align-middle" aria-current="page" href="/members/login" sec:authorize="isAnonymous()">로그인</a>
-                    <a class="menu link-secondary text-white-50 fw-bolder align-middle" aria-current="page" href="/members/logout" sec:authorize="isAuthenticated()" >로그아웃</a>
+                <div class="col-4 pb-3">
+                    <form class="col-9 row mt-3 pb-5 bg-white rounded-pill" id="searchForm" style=" width: 400px; height:40px;"
+                          action="/riot/summoners" method="get">
+                        <div class=" col-2" >
+                            <button type="button" class="pb-2 btn dropdown-toggle" style="font-size:13px;" data-bs-toggle="dropdown" aria-expanded="false">
+                                한국
+                            </button>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="#" style="font-size:13px;">한국</a></li>
+                            </ul>
+                        </div>
+                        <input name="summoners" id="summoners" class="col-6 form-control border-light my-2" type="search"
+                               placeholder="소환사 이름" aria-label="Search" style="width:200px; height:35px; text-align:center;">
+                        <input name="summonersTag" id="summonersTag" class="col-2 form-control border-light my-2" type="search"
+                               value="kr1" aria-label="Search" style="width:70px; height:35px; text-align:center;">
+
+                        <button class="btn col-2 ms-2" type="submit" id="searchBtn" style="float:right; width:30px;">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="none" stroke="currentColor"
+                                 stroke-linecap="round" stroke-linejoin="round" stroke-width="2" role="img"
+                                 viewBox="0 0 24 24">
+                                <title>Search</title>
+                                <circle cx="10.5" cy="10.5" r="7.5"/>
+                                <path d="M21 21l-5.2-5.2"/>
+                            </svg>
+                        </button>
+                    </form>
+                </div>
+                <div class="col-4 d-flex justify-content-end align-items-center">
+                    <a class="menu link-secondary text-white-50 fw-bolder " href="/board/freeBoard">자유 게시판</a>
+                    <a class="menu link-secondary text-white-50 fw-bolder " aria-current="page" href="/members/login" sec:authorize="isAnonymous()">로그인</a>
+                    <a class="menu link-secondary text-white-50 fw-bolder " aria-current="page" href="/members/logout" sec:authorize="isAuthenticated()" >로그아웃</a>
                 </div>
             </div>
         </header>
