--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -35,9 +35,9 @@
             <aside id="left" class="col-3 rounded">
             </aside>
             <div class="ms-4 me-5 col-4" style="height:600px;">
-                <img src="/images/yupLogo.png" style="width:450px;" class="py-3 mt-3 mb-5">
+                <img src="/images/yupLogo.png" style="width:450px;" class="ms-5 py-3 mt-3 mb-5">
 
-                <form class="row mt-3 pb-5 bg-white rounded-pill" id="searchForm" style=" width: 500px; height:50px;"
+                <form class="row mt-3 pb-5 bg-white rounded-pill ms-5" id="searchForm" style=" width: 500px; height:50px;"
                       action="/riot/summoners" method="get">
                     <div class="my-2 col-2">
                         <button type="button" class=" btn dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
